<resources>
    <string name="app_name">Stick2Exercise</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_entrance">Exercise Lists</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="list_name">Exercise List Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="title_activity_exercise_list">Exercise List</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="create">Create</string>
    <string name="bpm">BPM</string>
    <string name="exerciseDuration">Exercise Duration</string>
    <string name="break_duration">Break Duration</string>
    <string name="play_duration">Play Duration</string>
    <string name="title_activity_exercise">Exercise</string>

    <string name="vertical_ellipsis">&#8942;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="time_signature">Time Signature</string>
    <string name="tempo">Tempo</string>
    <string name="time_left">Time Left: </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="list_menu">Exercise List Menu</string>
    <string name="empty_lists_message">You don\'t have any exercise lists.\nClick \'+\' button below
        to create a new list.</string>
    <string name="empty_exercise_message">You don\'t have any exercises.\nClick \'+\' button below
        to create a new exercise.</string>
    <string name="list_delete_message">Exercise list has been deleted.</string>
    <string name="exercise_delete_message">Exercise has been deleted.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="incorrect_login">Incorrect login information.</string>
    <string name="email_used">This email has been used.</string>
    <string name="error_empty_tempo">Tempo cannot be empty.</string>
    <string name="error_zero_duration">Total play duration cannot be zero.</string>
    <string name="new_exercise_list">New Exercise List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dev_email">halil.kaplan@ogr.sakarya.com.tr</string>
    <string name="exercise_lists">Exercise Lists</string>
    <string name="metronome">Metronome</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="error_tempo_limits">Tempo should be between 30–300 bpm.</string>
    <string name="new_exercise">New Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="metronome_settings">Metronome Settings</string>
    <string name="metronome_sound">Metronome Sound: </string>
    <string name="exercise_settings">Exercise Settings</string>
    <string name="settings_next_exercise">Play next exercise automatically: </string>
    <string name="count_in">"Count 2 bar before each exercise: "</string>
    <string name="default_break_duration">Default Break Duration</string>
    <string name="save">Save</string>
    <string name="beep">Beep</string>
    <string name="click">Click</string>
    <string name="saved">Saved</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="text_screen_on">Keep screen on at exercise screen.</string>
    <string name="menu">Menu</string>
    <string name="user_options">User Options</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="exercises">Exercises</string>
    <string name="undo">UNDO</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="exercise">Exercise</string>
    <string name="previous_nexercise">Previous \nExercise</string>
    <string name="next_nexercise">Next \nExercise</string>
    <string name="exercise_sayı">Exercise Count:</string>
    <string name="empty_list">Empty List</string>
    <string name="total_duration">Total Duration:</string>
    <string name="welcome_text">Welcome to Stick2Exercise!</string>
    <string name="welcome_info">Would you like to create an account to store your information to cloud?</string>
    <string name="welcome_yes">Yes, take me to registration page</string>
    <string name="welcome_no">No, store my information only locally</string>
    <string name="next_exercise">Next Exercise</string>
    <string name="skip">Skip Break</string>
</resources>
