<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Menu">
    <menu>
        <item
            android:id="@+id/nav_routine_list"
            android:icon="?android:attr/actionModeSelectAllDrawable"
            android:title="@string/routine_list" />
        <item
            android:id="@+id/nav_metronome"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/metronome" />
    </menu>
    </item>

    <item android:title="User Options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
