<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelBlueDarker"
    android:padding="16dp"
    tools:context="com.kaplanbora.stick2exercise.WelcomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="120dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_info"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_yes"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_no"
        app:layout_constraintTop_toBottomOf="@id/yesButton" />

</android.support.constraint.ConstraintLayout>
