<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="16dp">

    <TextView
        android:id="@+id/metronome_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metronome_settings"
        android:textAppearance="@style/BlackText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/hr2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/metronome_settings"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/metronome_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/metronome_sound"
        android:textAppearance="@style/BlackText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr2" />

    <View
        android:id="@+id/hr1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/exercise_settings"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/exercise_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/exercise_settings"
        android:textAppearance="@style/BlackText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metronome_sound" />

    <TextView
        android:id="@+id/nextExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/BlackText"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr1"
        android:text="@string/settings_next_exercise"
        />

    <Switch
        android:id="@+id/autoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr1" />

    <TextView
        android:id="@+id/countIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/BlackText"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextExercise"
        android:text="@string/count_in"
        />

    <Switch
        android:id="@+id/countinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextExercise"
        />

    <TextView
        android:id="@+id/defaultDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/BlackText"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countIn"
        android:text="@string/default_break_duration"
        />

    <View
        android:id="@+id/hr3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/defaultDuration"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:id="@+id/minuteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textAppearance="@style/BlackTextSmall" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_height="40dp"
            app:np_orientation="horizontal"
            app:np_width="120dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textAppearance="@style/BlackTextSmall" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/secondPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_height="40dp"
            app:np_orientation="horizontal"
            app:np_width="120dp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pastelOrange"
        android:text="@string/save"
        android:textColor="@color/pastelWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>