<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.kaplanbora.stick2exercise.CreateExerciseActivity">

    <TextView
        android:id="@+id/exerciseNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textAppearance="@style/BlackText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exerciseNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/exerciseNameLabel" />

    <TextView
        android:id="@+id/exerciseTempoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tempo"
        android:textAppearance="@style/BlackText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseNameEdit" />

    <EditText
        android:id="@+id/exerciseTempoEdit"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseTempoLabel" />

    <TextView
        android:id="@+id/bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingStart="4dp"
        android:text="@string/bpm"
        android:textAppearance="@style/BlackTextSmall"
        app:layout_constraintBottom_toBottomOf="@id/exerciseTempoEdit"
        app:layout_constraintLeft_toRightOf="@id/exerciseTempoEdit" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exerciseDuration"
        android:textAppearance="@style/BlackText"
        app:layout_constraintTop_toBottomOf="@id/exerciseTempoEdit" />

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration">

        <TextView
            android:id="@+id/exerciseMinuteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textAppearance="@style/BlackTextSmall" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/exerciseMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_height="40dp"
            app:np_orientation="horizontal"
            app:np_width="120dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration">

        <TextView
            android:id="@+id/exerciseSecondLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textAppearance="@style/BlackTextSmall" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/exerciseSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_height="40dp"
            app:np_orientation="horizontal"
            app:np_width="120dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/durationBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/break_duration"
        android:textAppearance="@style/BlackText"
        app:layout_constraintTop_toBottomOf="@id/lay2" />

    <LinearLayout
        android:id="@+id/lay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationBreak">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textAppearance="@style/BlackTextSmall" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/breakMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_height="40dp"
            app:np_orientation="horizontal"
            app:np_width="120dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationBreak">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textAppearance="@style/BlackTextSmall" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/breakSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_height="40dp"
            app:np_orientation="horizontal"
            app:np_width="120dp" />
    </LinearLayout>

    <Button
        android:id="@+id/exerciseCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pastelOrange"
        android:text="@string/create"
        android:textColor="@color/pastelWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
