<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/metronomeTempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_back"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo"
            android:textAppearance="@style/LargeText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusTenButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="-10" />

            <Button
                android:id="@+id/minusOneButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:text="-1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/VeryLargeText"
                android:text="120 BPM" />

            <Button
                android:id="@+id/plusOneButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:text="+1" />

            <Button
                android:id="@+id/plusTenButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="+10" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/metronomeSig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_back"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metronomeTempo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_signature"
            android:textAppearance="@style/LargeText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subdivUp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="4"
                android:textAppearance="@style/VeryLargeText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="6dp"
                android:text="/"
                android:textAppearance="@style/LargeText" />

            <Button
                android:id="@+id/subdivDown"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="4"
                android:textAppearance="@style/LargeText" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pastelBlue"
        android:gravity="center"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/android_white"
        android:textSize="128sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutTimer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metronomeSig" />


    <LinearLayout
        android:id="@+id/layoutTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_back"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/startButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/start"
            android:textAppearance="@style/LargeText" />

        <TextView
            android:id="@+id/timerMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="@color/pastelBlack"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/pastelBlack"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/timerSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="@color/pastelBlack"
            android:textSize="48sp" />

        <Button
            android:id="@+id/resetButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reset"
            android:textAppearance="@style/LargeText" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>